2023-07-04T16:11:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5456711540 # 1693
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-04
* notice: last 14d: unq all: 46 101
* notice: prev accum: outdated-unq outdated-all / unq all: 1323 4686 / 1382 4785
* notice: next accum: outdated-unq outdated-all / unq all: 1323 4686 / 1384 4787
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-04]

2022-12-11T08:19:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3668109127 # 1108
* notice: last 14d: unq all: 9 27
* notice: prev accum: outdated-unq outdated-all / unq all: 724 2654 / 734 2675
* notice: next accum: outdated-unq outdated-all / unq all: 724 2654 / 736 2681
* notice: prev exec diff / last date diff / accum: unq all: +2 +6 -0 -0 / +2 +6 -0 -0 / 2 6
* notice: removed / changed dates: [] / [2022-12-11]

2022-12-11T01:25:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3666794568 # 1107
* notice: last 14d: unq all: 7 21
* notice: prev accum: outdated-unq outdated-all / unq all: 723 2652 / 734 2674
* notice: next accum: outdated-unq outdated-all / unq all: 724 2654 / 734 2675
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-11-26] / [2022-12-10]

2022-12-10T08:19:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3663378017 # 1105
* notice: last 14d: unq all: 7 21
* notice: prev accum: outdated-unq outdated-all / unq all: 723 2652 / 733 2673
* notice: next accum: outdated-unq outdated-all / unq all: 723 2652 / 734 2674
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-26 2022-12-10]
