@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-04T16:11:19Z",
-  "count_outdated" : 4686,
-  "uniques_outdated" : 1323,
+  "timestamp" : "2023-07-05T00:54:26Z",
+  "count_outdated" : 4687,
+  "uniques_outdated" : 1324,
   "count" : 4787,
   "uniques" : 1384,
   "clones" : [
-    {
-      "timestamp": "2023-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-21T00:00:00Z",
       "count": 4,
