@@ -1,12 +1,7 @@
 {
-  "count": 101,
+  "count": 100,
   "uniques": 46,
   "clones": [
-    {
-      "timestamp": "2023-06-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-06-21T00:00:00Z",
       "count": 4,
